--- a/frontend-vite/src/pages/AuthPages.css
+++ b/frontend-vite/src/pages/AuthPages.css
@@ -22,6 +22,8 @@
   margin-bottom: 30px;
   color: #fff;
   font-size: 28px;
+  font-family: 'Cairo', sans-serif;
+  font-weight: 700;
 }
 
 .checkbox-group {
@@ -58,12 +60,15 @@
   margin-top: 20px;
   color: #aaa;
   font-size: 14px;
+  font-family: 'Cairo', sans-serif;
+  font-weight: 500;
 }
 
 .auth-link a {
   color: #fe2c55;
   text-decoration: none;
   font-weight: 600;
+  font-family: 'Cairo', sans-serif;
 }
 
 .auth-link a:hover {
